Added dashboards screenshots

--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -829,8 +829,13 @@ https://www.elastic.co/elk-stack
 \newpage
 \section{Resultat av testningsformuläret}
 \includegraphics[width=1\textwidth]{TrafficDashboard.pdf}
+\newpage
+\section{Kibana dashboard, slutprodukten}
+Följande bilder presenterar slutprodukten av dashboarden. De två bilderna sitter ihop men delades upp i två p.g.a. formatering.
 
-\section{Kibana dashboard}
+\includegraphics[width=1\textwidth]{Dashboard1}
+\newpage
+\includegraphics[width=1\textwidth]{Dashboard2}
 
 \end{appendices}
 
